2013-09-15  Earnie Boyd  <earnie@users.sourceforge.net>

	Publish gdb-7.6.1

	* mingw32/mingw32-gdb.xml (bin): Add gdb-7.6.1 release.
	(doc): Ditto.
	(lic): New component.
	(man): Ditto.
	(lang): Ditto.
	(info): Ditto.
	* common/issue.log mingw32/issue.log: Update accordingly.

	Publish correction for wtsapi32.h.

	* mingw32/mingw32-runtime.xml:
	(minwrt): Add 4.0.2 release.
	(w32api): Ditto.
	* common/issue.log mingw32/issue.log: Update accordingly.

	Publish contrib package tcl/tk 8.6.0.

	* mingw32/mingw32-package-list.xml: Add mingw32-tcktk.xml package.
	Add package group MinGW Contributed.
	* contrib/mingw32-tcltk.xml: New package.
	* common/issue.log mingw32/issue.log contrib/issue.log: Update
	accordingly.

	Add affiliate group for Source-Level Debugger to gdb release and retab.

	* mingw32/mingw32-package-list.xml: Retab due to broken vim modeline
	configuration on my side.
	* mingw32/mingw32-gdb.xml: Add affiliate group for Source-Level Debugger
	and retab due to broken vim modeline configuration on my side.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-09-14  Earnie Boyd  <earnie@users.sourceforge.net>

	Publish a correction for libwinspool.a.

	* mingw32/mingw32-runtime.xml:
	(mingwrt): Add 4.0.1 release.
	(w32api): Ditto.
	* common/issue.log mingw32/issue.log: Update accordingly.

2013-09-10  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Publish mingw-get release 0.6.1-beta-20130910-1.

	* mingw32/mingw32-mingw-get.xml:
	(mingw-get) <bin>: Add 0.6.1-beta-20130910-1 release specification;
	(mingw-get) <gui, lic>: Likewise.
	(pkginfo) <bin>: Likewise.

	* mingw32-mingw-get.xml.lzma: Regenerated and published.
	* mingw32-package-list.lzma package-list.xml.lzma: Likewise.

	* common/issue.log mingw32/issue.log: Updated accordingly.

2013-09-10  Earnie Boyd  <earnie@users.sourceforge.net>

	* mingw32/mingw32-expat.xml: Correct the usage of libexpat.
	* common/issue.log mingw32/issue.log: Updated accordingly.
