@@ -29,71 +29,75 @@
 
       <component class="dev">
         <requires eq="mingwrt-%-mingw32-dll.tar.%" />
-	<release tarname="mingwrt-4.0.2-1-mingw32-dev.tar.lzma" />
-	<release tarname="mingwrt-4.0.1-1-mingw32-dev.tar.lzma" />
-	<release tarname="mingwrt-4.0.0-1-mingw32-dev.tar.lzma" />
-	<!-- The default source and licence name changed so we must -->
-	<!-- specify the original. -->
+        <release tarname="mingwrt-4.0.3-1-mingw32-dev.tar.lzma" />
+        <release tarname="mingwrt-4.0.2-1-mingw32-dev.tar.lzma" />
+        <release tarname="mingwrt-4.0.1-1-mingw32-dev.tar.lzma" />
+        <release tarname="mingwrt-4.0.0-1-mingw32-dev.tar.lzma" />
+        <!-- The default source and licence name changed so we must -->
+        <!-- specify the original. -->
         <release tarname="mingwrt-3.20-2-mingw32-dev.tar.lzma" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.20-mingw32-dev.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.19-mingw32-dev.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.18-mingw32-dev.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.17-mingw32-dev.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
       </component>
 
       <component class="dll">
-	<release tarname="mingwrt-4.0.2-1-mingw32-dll.tar.lzma" />
-	<release tarname="mingwrt-4.0.1-1-mingw32-dll.tar.lzma" />
-	<release tarname="mingwrt-4.0.0-1-mingw32-dll.tar.lzma" />
-	<!-- The default source and licence name changed so we must -->
-	<!-- specify the original. -->
+        <release tarname="mingwrt-4.0.3-1-mingw32-dll.tar.lzma" />
+        <release tarname="mingwrt-4.0.2-1-mingw32-dll.tar.lzma" />
+        <release tarname="mingwrt-4.0.1-1-mingw32-dll.tar.lzma" />
+        <release tarname="mingwrt-4.0.0-1-mingw32-dll.tar.lzma" />
+        <!-- The default source and licence name changed so we must -->
+        <!-- specify the original. -->
         <release tarname="mingwrt-3.20-2-mingw32-dll.tar.lzma" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.20-mingw32-dll.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.19-mingw32-dll.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.18-mingw32-dll.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="mingwrt-3.17-mingw32-dll.tar.gz" >
-	  <source tarname="mingwrt-%-mingw32-src.tar.%" />
-	  <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="mingwrt-%-mingw32-src.tar.%" />
+          <licence tarname="mingwrt-%-mingw32-dev.tar.%" />
+        </release>
       </component>
 
       <component class="lic">
-	<release tarname="mingwrt-4.0.2-1-mingw32-lic.tar.lzma" />
-	<release tarname="mingwrt-4.0.1-1-mingw32-lic.tar.lzma" />
-	<release tarname="mingwrt-4.0.0-1-mingw32-lic.tar.lzma" />
+        <release tarname="mingwrt-4.0.3-1-mingw32-lic.tar.lzma" />
+        <release tarname="mingwrt-4.0.2-1-mingw32-lic.tar.lzma" />
+        <release tarname="mingwrt-4.0.1-1-mingw32-lic.tar.lzma" />
+        <release tarname="mingwrt-4.0.0-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="doc">
-	<release tarname="mingwrt-4.0.2-1-mingw32-doc.tar.lzma" />
-	<release tarname="mingwrt-4.0.1-1-mingw32-doc.tar.lzma" />
-	<release tarname="mingwrt-4.0.0-1-mingw32-doc.tar.lzma" />
+        <release tarname="mingwrt-4.0.3-1-mingw32-doc.tar.lzma" />
+        <release tarname="mingwrt-4.0.2-1-mingw32-doc.tar.lzma" />
+        <release tarname="mingwrt-4.0.1-1-mingw32-doc.tar.lzma" />
+        <release tarname="mingwrt-4.0.0-1-mingw32-doc.tar.lzma" />
       </component>
     </package>
 
@@ -116,49 +120,53 @@
       <licence tarname="w32api-%-mingw32-lic.tar.%" />
 
       <component class="dev">
-	<release tarname="w32api-4.0.2-1-mingw32-dev.tar.lzma" >
-	  <requires eq="mingwrt-4.0.2-1-mingw32-dev.tar.lzma" />
-	</release>
-	<release tarname="w32api-4.0.1-1-mingw32-dev.tar.lzma" >
-	  <requires eq="mingwrt-4.0.1-1-mingw32-dev.tar.lzma" />
-	</release>
-	<release tarname="w32api-4.0.0-1-mingw32-dev.tar.lzma" >
-	  <requires eq="mingwrt-4.0.0-1-mingw32-dev.tar.lzma" />
-	</release>
-	<!-- The default source and licence name changed so we must -->
-	<!-- specify the original. -->
+        <release tarname="w32api-4.0.3-1-mingw32-dev.tar.lzma" >
+          <requires eq="mingwrt-4.0.3-1-mingw32-dev.tar.lzma" />
+        </release>
+        <release tarname="w32api-4.0.2-1-mingw32-dev.tar.lzma" >
+          <requires eq="mingwrt-4.0.2-1-mingw32-dev.tar.lzma" />
+        </release>
+        <release tarname="w32api-4.0.1-1-mingw32-dev.tar.lzma" >
+          <requires eq="mingwrt-4.0.1-1-mingw32-dev.tar.lzma" />
+        </release>
+        <release tarname="w32api-4.0.0-1-mingw32-dev.tar.lzma" >
+          <requires eq="mingwrt-4.0.0-1-mingw32-dev.tar.lzma" />
+        </release>
+        <!-- The default source and licence name changed so we must -->
+        <!-- specify the original. -->
         <release tarname="w32api-3.17-2-mingw32-dev.tar.lzma" >
-	  <source tarname="w32api-%-mingw32-src.tar.%" />
-	  <licence tarname="w32api-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="w32api-%-mingw32-src.tar.%" />
+          <licence tarname="w32api-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="w32api-3.17-1-mingw32-dev.tar.lzma" >
-	  <source tarname="w32api-%-mingw32-src.tar.%" />
-	  <licence tarname="w32api-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="w32api-%-mingw32-src.tar.%" />
+          <licence tarname="w32api-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="w32api-3.16-1-mingw32-dev.tar.lzma" >
-	  <source tarname="w32api-%-mingw32-src.tar.%" />
-	  <licence tarname="w32api-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="w32api-%-mingw32-src.tar.%" />
+          <licence tarname="w32api-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="w32api-3.15-1-mingw32-dev.tar.lzma" >
-	  <source tarname="w32api-%-mingw32-src.tar.%" />
-	  <licence tarname="w32api-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="w32api-%-mingw32-src.tar.%" />
+          <licence tarname="w32api-%-mingw32-dev.tar.%" />
+        </release>
         <release tarname="w32api-3.14-mingw32-dev.tar.gz" >
-	  <source tarname="w32api-%-mingw32-src.tar.%" />
-	  <licence tarname="w32api-%-mingw32-dev.tar.%" />
-	</release>
+          <source tarname="w32api-%-mingw32-src.tar.%" />
+          <licence tarname="w32api-%-mingw32-dev.tar.%" />
+        </release>
       </component>
 
       <component class="lic">
-	<release tarname="w32api-4.0.2-1-mingw32-lic.tar.lzma" />
-	<release tarname="w32api-4.0.1-1-mingw32-lic.tar.lzma" />
-	<release tarname="w32api-4.0.0-1-mingw32-lic.tar.lzma" />
+        <release tarname="w32api-4.0.3-1-mingw32-lic.tar.lzma" />
+        <release tarname="w32api-4.0.2-1-mingw32-lic.tar.lzma" />
+        <release tarname="w32api-4.0.1-1-mingw32-lic.tar.lzma" />
+        <release tarname="w32api-4.0.0-1-mingw32-lic.tar.lzma" />
       </component>
 
       <component class="doc">
-	<release tarname="w32api-4.0.2-1-mingw32-doc.tar.lzma" />
-	<release tarname="w32api-4.0.1-1-mingw32-doc.tar.lzma" />
-	<release tarname="w32api-4.0.0-1-mingw32-doc.tar.lzma" />
+        <release tarname="w32api-4.0.3-1-mingw32-doc.tar.lzma" />
+        <release tarname="w32api-4.0.1-1-mingw32-doc.tar.lzma" />
+        <release tarname="w32api-4.0.0-1-mingw32-doc.tar.lzma" />
       </component>
     </package>
 
